platform_versioned_docs/version-4.11.0/_partials/auth/sso/google.mdx
import Flow, { Step } from "@site/src/components/Flow";
import DisablePasswordAuthPartial from "../disable-password-auth.mdx";

## Introduction

Google Single Sign-On (SSO) allows users to access the platform using their Google credentials. This integration enhances security and simplifies user management by leveraging Google's authentication infrastructure.

## Prerequisites

Before setting up Google SSO, ensure you have:

- A Google Account with admin privileges
- Administrator access to the platform
- Access to GPC console for creating OAuth2.0 credentials

## Configuration steps

<Flow id="sso-google">
<Step>

**Create platform config for Google**

The platform can use Google's OpenID Connect provider as an authentication source.

:::info Obtaining Google OAuth2.0 credentials
To get the required `clientId` and `clientSecret`, follow these steps:
- Go to the [GCP Console](https://console.cloud.google.com/)
- Navigate to "APIs & Services" > "Credentials"
- Click "Create Credentials" and select "OAuth client ID"
- Follow the prompts to set up your OAuth consent screen and create your credentials
:::

To configure the platform to use Google for SSO, use the following YAML configuration to update your platform config (the `config` section of the [`values.yaml`](../../../configure/introduction.mdx)) or through vCluster Platform UI <!-- vale off -->**Admin > Config**<!-- vale on -->:
```yaml title="Google SSO Configuration"
auth:
  # Tell vCluster Platform to use google authentication
  google:
    #
    #
    # REQUIRED CONFIGURATION
    #
    #
    # ClientID for the google authentication. Can be string literal or pulled from the environment.
    clientId: $CLIENTID
    # ClientSecret for the google authentication. Can be string literal or pulled from the environment.
    clientSecret: $CLIENTSECRET
    # Callback URL in the form of https://your-loft-domain/auth/google/callback
    redirectURI: https://vcluster-platform.my.domain/auth/google/callback
    #
    #
    # OPTIONAL CONFIGURATION
    #
    #
    # (Optional) defaults to "profile" and "email"
    scopes: ["profile", "email"]
    # (Optional) list of whitelisted domains. If this field is nonempty,
    # only users from a listed domain will be allowed to log in
    hostedDomains: []
    # (Optional) list of whitelisted groups. If this field is nonempty,
    # only users from a listed group will be allowed to log in
    groups: []
    # (Optional) path to service account json. If nonempty,
    # and groups claim is made, will use authentication from file to
    # check groups with the admin directory api
    serviceAccountFilePath: /path/to/service/account.json
    # (Optional) Required if serviceAccountFilePath is set. The email of
    # a GSuite super user which the service account will impersonate
    # when listing groups
    adminEmail: myuser@mydomain.com
```

:::warning Security best practice
Always store sensitive information like `clientSecret` securely. Consider using environment variables or secure secret management solutions.
:::

:::note
Replace the `redirectURI` with your actual domain where the platform is hosted.
:::

</Step>
<Step>

**Authenticate via Google**

After saving the new configuration, the platform should restart itself. To authenticate:

- Navigate to the platform login page
- Click on the "Login with Google" button
- You should be redirected to Google's login page
- Enter your Google credentials
- Grant the necessary permissions when prompted
- You should be redirected back to the platform, now authenticated

</Step>
<Step>

**Disable Username + Password Authentication** (optional)

<DisablePasswordAuthPartial/>
</Step>
</Flow>
